css/style.scss
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300;400;500&family=Poppins:wght@300;400;600&family=Roboto:wght@100;300;400&family=Source+Sans+Pro:wght@300;400&family=Ubuntu:wght@300;400;500&display=swap');

$primary-color: #0275d8;
$base-font: 16px;

* {
    padding: 0;
    margin: 0;
}

body {
    margin: 0;
    box-sizing: border-box;
    font-size: $base-font;
    font-family: 'Roboto', sans-serif;
}

p,
h1,
h2,
h3 {
    margin: 0;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 60%;
    margin: 0 auto;
    flex-direction: column;

    .header {
        margin-top: 8rem;

        h1 {
            font-weight: 800;
        }
    }

    .weather-container {
        margin-top: 2rem;
        display: flex;
        align-items: center;
        flex-direction: column;

        .search-container {
            display: flex;
            flex-direction: column;
            position: relative;

            .autocomplete-container {
                position: absolute;
                margin-top: 3em;
                width: 100%;
                z-index: 999;
                background-color: white;
                border-radius: .5em;

                ul {
                    list-style-type: none;
                    padding-left: 1em;
                    box-shadow: .3em .3em rgb(167, 167, 167);
                    border-radius: .5em;

                    li {
                        padding: .1em 0;
                        font-size: .9em;
                        opacity: .9;
                    }

                    li:hover {
                        cursor: pointer;
                        color: $primary-color;
                    }
                }
            }

        }

        .weather-input {
            display: flex;
            flex-direction: row;

            button {
                margin-left: .5em;
            }
        }

        .weather-info {
            text-align: center;
            margin-top: 2rem;

            .condition-container {
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: center;
                min-width: 40%;
                margin: 0 auto;

                .temp-container {
                    display: flex;
                    justify-content: flex-start;
                    padding-right: 1em;

                    h1 {
                        font-size: 5rem;
                    }
                }

                .condition {
                    display: flex;
                    flex-direction: column;
                    align-items: center;
                    justify-content: flex-start;
                    padding-left: 1em;

                    h3 {
                        font-size: 1.2em;
                    }

                    img {
                        width: 6em;
                    }
                }
            }

            .in {
                padding: 1em 0 0 0;
                opacity: .6;
            }

            .location-container {
                h3 {
                    opacity: .6;
                }
            }

            .weather-forecast {
                display: flex;
                align-items: center;
                justify-content: center;
                margin-top: 3em;

                .forecast-container {
                    padding: 0 2em;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    flex-direction: column;

                    .top-container {
                        display: flex;
                        flex-direction: row;
                        font-size: .8em;
                        opacity: .7;
                    }

                    .temp-container__forecast {
                        display: flex;
                        justify-content: center;
                        padding: 1em 0;

                        h1 {
                            font-size: 1.8em;
                        }
                    }

                    .condition-container__forecast {
                        display: flex;
                        flex-direction: column;
                        align-items: center;
                        justify-content: center;

                        h3 {
                            font-size: 1em;
                        }

                        img {
                            width: 3em;
                        }
                    }
                }
            }
        }
    }
}

.hidden {
    display: none;
}

.visible {
    display: block;
}

@media screen and (max-width: 480px) {
    .weather-forecast {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .forecast-container {
        margin: 1.5em 0;
        min-width: 100%;
    }

    .temp-container__forecast {
        min-width: 50%;
        display: flex;
        justify-content: center;
    }


    .condition-container__forecast {
        min-width: 50%;
    }
}

